ags (3.14.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsHybridSynth
	* implemented ags-fx-synth
	* TODO:JK: implemented ags-fx-fm-synth
	* implemented ags-fx-chorus
	* added enabled port to ags-fx-low-pass and ags-fx-high-pass
	* fixed AgsSynthUtil sawtooth and triangle

ags (3.13.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved poll timeout of ALSA and OSSv4 devout

ags (3.13.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed OSSv4 list cards functions

ags (3.13.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing ALSA and OSSv4 switch buffer flag
	* fixed missing ALSA and OSSv4 soundcard thread sync flags
	* fixed AgsClearBuffer task to clear correct buffer for new ALSA and OSSv4

ags (3.13.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsChorusUtil boundaries
	* fixed conditional build of AgsAlsaDevout
	* fixed AgsOssMidiin recording MIDI

ags (3.13.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsChorusUtil

ags (3.13.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsTaskLauncher freeing tasks
	* fixed AgsScrolledLevelBox, AgsScrolledScaleBox, AgsScrolledAutomationEditBox
	  and AgsScrolledWaveEditBox not available property shadow-type of AgsViewport

ags (3.13.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsAlsaDevout, AgsAlsaDevin and AgsAlsaMidiin
	* implemented AgsOssDevout, AgsOssDevin and AgsOssMidiin
	* deprecated AgsDevout, AgsDevin and AgsMidiin
	* refactored make use of new device implementation of ALSA and OSS

ags (3.13.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsWave insert from clipboard
	* fixed AgsCompositEdit match line of wave form editor
	* fixed AgsAudioApplicationContext to set setup_ready field to TRUE

ags (3.13.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]