@@ -253,12 +253,6 @@ ags_fx_volume_audio_signal_get_type
 ags_fx_volume_channel_get_type
 ags_fx_volume_channel_processor_get_type
 ags_fx_volume_recycling_get_type
-ags_fx_vst3_audio_get_type
-ags_fx_vst3_audio_processor_get_type
-ags_fx_vst3_audio_signal_get_type
-ags_fx_vst3_channel_get_type
-ags_fx_vst3_channel_processor_get_type
-ags_fx_vst3_recycling_get_type
 ags_generic_pitch_util_get_type
 ags_generic_recall_channel_run_get_type
 ags_generic_recall_recycling_get_type
@@ -270,7 +264,6 @@ ags_gstreamer_port_get_type
 ags_gstreamer_server_get_type
 ags_hq_pitch_util_get_type
 ags_input_get_type
-ags_instantiate_vst3_plugin_get_type
 ags_ipatch_dls2_reader_get_type
 ags_ipatch_get_type
 ags_ipatch_gig_reader_get_type
@@ -508,11 +501,7 @@ ags_volume_channel_get_type
 ags_volume_channel_run_get_type
 ags_volume_recycling_get_type
 ags_volume_util_get_type
-ags_vst3_conversion_get_type
-ags_vst3_manager_get_type
-ags_vst3_plugin_get_type
 ags_wasapi_devin_get_type
 ags_wasapi_devout_get_type
 ags_wave_get_type
 ags_wave_loader_get_type
-ags_write_vst3_port_get_type
