@@ -1,3 +1,9 @@
+ags (3.14.1)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed gtk-doc missing types
+	* fixed ags/meson.build missing files
+
 ags (3.14.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
